--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Women Safety App",
-  "short_name": "Safety",
+  "name": "Women Safety Laws",
+  "short_name": "WomenSafety",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ff3366",
-  "theme_color": "#ff3366"
+  "background_color": "#ff4081",
+  "theme_color": "#ff4081"
 }
